<resources>
   <string name="app_name">Let\'s Learn Together!</string>
   <string name="activity_introductory">Introductory Activity</string>
   <string name="activity_video_section">Sectiune Video</string>
   <string name="activity_text_to_sign_section">Sectiune Text - Dactilema</string>
   <string name="activity_voice_to_sign_section">Sectiune Voce - Dactilema</string>
   <string name="activity_expressions_section">Sectiune Expresii</string>
   <string name="activity_alphabet">Alfabet</string>
   <string name="activity_numbers">Numere</string>
   <string name="activity_colors">Culori</string>
   <string name="activity_animals">Animale</string>
   <string name="activity_objects">Obiecte</string>
   <string name="activity_people">Persoane</string>
   <string name="activity_emotions">Emotii</string>
   <string name="activity_verbs">Verbe</string>
   <string name="activity_forms_of_address">Formule de adresare</string>
   <string name="activity_household_animals">Animale domestice</string>
   <string name="activity_wild_animals">Animale salbatice</string>
   <string name="activity_home">Acasa</string>
   <string name="activity_outside">Afara</string>
   <string name="activity_class">Clasa</string>
   <string name="activity_city">Oras</string>
   <string name="activity_shop">Magazin</string>
   <string name="activity_money">Bani</string>
   <string name="activity_products">Produse</string>
   <string name="activity_family_members">Membrii familiei</string>
   <string name="activity_pronouns">Pronume</string>
   <string name="activity_video_player">Video Player</string>
   <string name="activity_all_categories">Toate Categoriile</string>
   <string name="activity_category">Detalii Categorie</string>
   <string name="activity_favorite_categories">Categorii Favorite</string>
   <string name="activity_new_category">Categorie Noua</string>
   <string name="video_section">Sectiune Video</string>
   <string name="text_to_sign_section">Sectiune Text - Dactilema</string>
   <string name="voice_to_sign_section">Sectiune Voce - Dactilema</string>
   <string name="expressions_section">Sectiune Expresii</string>
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
   <string name="header_title_video_section">SECTIUNE VIDEO</string>
   <string name="header_title_text_to_sign_section">SECTIUNE TEXT - DACTILEMA</string>
   <string name="header_title_voice_to_sign_section">SECTIUNE VOCE - DACTILEMA</string>
   <string name="header_title_expressions_section">SECTIUNE EXPRESII</string>
   <string name="header_subtitle_video_section">Alege categoria dorita si vizioneaza un scurt videoclip cu traducerea acesteia in limbajul semnelor.</string>
   <string name="header_subtitle_text_to_sign_section">Introdu un text si lasa-ne pe noi sa-l traducem in limbajul semnelor!</string>
   <string name="header_subtitle_voice_to_sign_section">Introdu un mesaj vocal si lasa-ne pe noi sa-l traducem in limbajul semnelor!</string>
   <string name="header_subtitle_expressions_section">Te ajutam sa traduci expresii in limbajul semnelor.</string>
   <string name="header_title_alphabet">ALFABET</string>
   <string name="header_title_animals">ANIMALE</string>
   <string name="header_title_city">ORAS</string>
   <string name="header_title_class">CLASA</string>
   <string name="header_title_colors">CULORI</string>
   <string name="header_title_emotions">EMOTII</string>
   <string name="header_title_family_members">MEMBRII FAMILIEI</string>
   <string name="header_title_forms_of_address">FORMULE DE ADRESARE</string>
   <string name="header_title_household_animals">ANIMALE DOMESTICE</string>
   <string name="header_title_home">ACASA</string>
   <string name="header_title_money">BANI</string>
   <string name="header_title_numbers">NUMERE</string>
   <string name="header_title_objects">OBIECTE</string>
   <string name="header_title_outside">AFARA</string>
   <string name="header_title_people">PERSOANE</string>
   <string name="header_title_products">PRODUSE</string>
   <string name="header_title_pronouns">PRONUME</string>
   <string name="header_title_shop">MAGAZIN</string>
   <string name="header_title_verbs">VERBE</string>
   <string name="header_title_wild_animals">ANIMALE SALBATICE</string>
   <string name="section_header_image">Section Header Image</string>
   <string name="section_header_overlay">Section Header Overlay</string>
   <string name="header_subtitle_category">Selecteaza categoria dorita.</string>
   <string name="header_subtitle_subcategory">Selecteaza subcategoria dorita.</string>
   <string name="input_placeholder_category">Cauta o categorie…</string>
   <string name="input_placeholder_subcategory">Cauta o subcategorie…</string>
   <string name="search_bar_icon">Searchbar Icon</string>
   <string name="see_favorites">Vizualizeaza favorite</string>
   <string name="home_page_button">To Home Page Button</string>
   <string name="placeholder_image">Placeholder Image</string>
   <string name="placeholder_text">Category name</string>
   <string name="placeholder_icon">Placeholder Icon</string>
   <string name="add_to_favorites">Adauga la favorite</string>
   <string name="remove_from_favorites">Elimina Favorit</string>
   <string name="category_header_image">Category Header Image</string>
   <string name="category_header_overlay">Category Header Overlay</string>
   <string name="header_title_favorites">Favorite</string>
   <string name="no_favorites_image">No Favorites Image</string>
   <string name="first_message">Se pare ca nu ai nici o categorie adaugata momentan!</string>
   <string name="second_message">Navigheaza printre colectiile disponibile si adauga cateva la favorite!</string>
   <string name="browse_collections">Acceseaza colectiile</string>
   <string name="background_image">Background Image</string>
   <string name="background_overlay">Background Overlay</string>
   <string name="app_logo">App Logo</string>
   <string name="welcome_text">Bine ai venit!</string>
   <string name="project_name">Let\'s Learn Together</string>
   <string name="project_description">Impreuna facilitam procesul de invatare al copiilor cu deficiente de auz.</string>
   <string name="rectangle">rectangle</string>
   <string name="header_text">Adauga categorie noua</string>
   <string name="input_placeholder_text_to_sign">Introduceti un text…</string>
   <string name="confirm_button">Confirma</string>
   <string name="category_name_placeholder">Category Name</string>
   <string name="sign">Sign</string>
   <string name="letter">a</string>
   <string name="backward_slider_button">Backward Slider Button</string>
   <string name="forward_slider_button">Forward Slider Button</string>
   <string name="add_new_category">Add New Category</string>
   <string name="category_name">Introduceti numele categoriei</string>
   <string name="load_image">Incarcati o imagine</string>
   <string name="load_video">Incarcati un videoclip</string>
   <string name="save_category">Salveaza categoria</string>
   <string name="save_subcategory">Salveaza subcategoria</string>
   <string name="A">A</string>
   <string name="B">B</string>
   <string name="C">C</string>
   <string name="D">D</string>
   <string name="E">E</string>
   <string name="F">F</string>
   <string name="G">G</string>
   <string name="H">H</string>
   <string name="I">I</string>
   <string name="J">J</string>
   <string name="K">K</string>
   <string name="L">L</string>
   <string name="M">M</string>
   <string name="N">N</string>
   <string name="O">O</string>
   <string name="P">P</string>
   <string name="Q">Q</string>
   <string name="R">R</string>
   <string name="S">S</string>
   <string name="T">T</string>
   <string name="U">U</string>
   <string name="V">V</string>
   <string name="W">W</string>
   <string name="X">X</string>
   <string name="Y">Y</string>
   <string name="Z">Z</string>
   <string name="ZERO">ZERO</string>
   <string name="UNU">UNU</string>
   <string name="DOI">DOI</string>
   <string name="TREI">TREI</string>
   <string name="PATRU">PATRU</string>
   <string name="CINCI">CINCI</string>
   <string name="SASE">SASE</string>
   <string name="SAPTE">SAPTE</string>
   <string name="OPT">OPT</string>
   <string name="NOUA">NOUA</string>
   <string name="ZECE">ZECE</string>
   <string name="ROSU">ROSU</string>
   <string name="PORTOCALIU">PORTOCALIU</string>
   <string name="GALBEN">GALBEN</string>
   <string name="VERDE">VERDE</string>
   <string name="ALBASTRU">ALBASTRU</string>
   <string name="INDIGO">INDIGO</string>
   <string name="VIOLET">VIOLET</string>
   <string name="MARO">MARO</string>
   <string name="ROZ">ROZ</string>
   <string name="TURCOAZ">TURCOAZ</string>
   <string name="ALB">ALB</string>
   <string name="GRI">GRI</string>
   <string name="NEGRU">NEGRU</string>
   <string name="CAINE">CAINE</string>
   <string name="PISICA">PISICA</string>
   <string name="PORC">PORC</string>
   <string name="CAPRA">CAPRA</string>
   <string name="GAINA">GAINA</string>
   <string name="IEPURE">IEPURE</string>
   <string name="PUI">PUI</string>
   <string name="VACA">VACA</string>
   <string name="CAL">CAL</string>
   <string name="COCOS">COCOS</string>
   <string name="GASCA">GASCA</string>
   <string name="OAIE">OAIE</string>
   <string name="RATA">RATA</string>
   <string name="LUP">LUP</string>
   <string name="VULPE">VULPE</string>
   <string name="ARICI">ARICI</string>
   <string name="LEU">LEU</string>
   <string name="VEVERITA">VEVERITA</string>
   <string name="ZIMBRU">ZIMBRU</string>
   <string name="URS_POLAR">URS POLAR</string>
   <string name="ELEFANT">ELEFANT</string>
   <string name="CROCODIL">CROCODIL</string>
   <string name="PAT">PAT</string>
   <string name="TELEVIZOR">TELEVIZOR</string>
   <string name="CALCULATOR">CALCULATOR</string>
   <string name="DULAP">DULAP</string>
   <string name="LINGURA">LINGURA</string>
   <string name="SCAUN">SCAUN</string>
   <string name="MASA">MASA</string>
   <string name="FRIGIDER">FRIGIDER</string>
   <string name="CUTIT">CUTIT</string>
   <string name="TOPOR">TOPOR</string>
   <string name="POARTA">POARTA</string>
   <string name="GEAM">GEAM</string>
   <string name="FURCA">FURCA</string>
   <string name="COPAC">COPAC</string>
   <string name="GARD">GARD</string>
   <string name="COASA">COASA</string>
   <string name="BEC">BEC</string>
   <string name="LOPATA">LOPATA</string>
   <string name="USA">USA</string>
   <string name="MANUAL">MANUAL</string>
   <string name="PIX">PIX</string>
   <string name="DICTIONAR">DICTIONAR</string>
   <string name="CARTE">CARTE</string>
   <string name="BANCA">BANCA</string>
   <string name="TEMA">TEMA</string>
   <string name="VIDEO_PROIECTOR">VIDEO PROIECTOR</string>
   <string name="TEST">TEST</string>
   <string name="STILOU">STILOU</string>
   <string name="TEST_GRILA">TEST GRILA</string>
   <string name="RADIERA">RADIERA</string>
   <string name="CRETA">CRETA</string>
   <string name="CATEDRA">CATEDRA</string>
   <string name="CREION">CREION</string>
   <string name="CAIET">CAIET</string>
   <string name="EURO">EURO</string>
   <string name="DOLAR">DOLAR</string>
   <string name="nav_home">Acasa</string>
   <string name="nav_video">Sectiune video</string>
   <string name="nav_text_to_sign">Sectiune Text - Dactilema</string>
   <string name="nav_voice_to_sign">Sectiune Voce - Dactilema</string>
   <string name="nav_expressions">Sectiune Expresii</string>
   <string name="nav_settings">Preferinte aplicatie</string>
   <string name="form_name">Name</string>
   <string name="form_email">Email</string>
   <string name="form_password">Password</string>
   <string name="form_mobile">Mobile</string>
   <string name="form_address">Address</string>
   <string name="form_birthday">Birthday</string>
   <string name="form_institution_id">Institution ID</string>
   <string name="form_role_id">Role ID</string>
   <string name="save_user">Save User</string>
</resources>