<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/menu">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home_black"/>
        <item
            android:id="@+id/navVideo"
            android:title="@string/nav_video"
            android:icon="@drawable/ic_video_section_black"/>
        <item
            android:id="@+id/navTextToSign"
            android:title="@string/nav_text_to_sign"
            android:icon="@drawable/ic_text_to_sign_section_black"/>
        <item
            android:id="@+id/navVoiceToSign"
            android:title="@string/nav_voice_to_sign"
            android:icon="@drawable/ic_voice_to_sign_section_black"/>
        <item
            android:id="@+id/navExpressions"
            android:title="@string/nav_expressions"
            android:icon="@drawable/ic_expressions_section_black"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navSettings"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_settings_black"/>
    </group>
</menu>