<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/favoriteHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="@string/header_title_favorites"
            android:textAllCaps="true"
            android:textColor="@color/light_blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/noFavoritesImage"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_below="@+id/favoriteHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:contentDescription="@string/no_favorites_image"
            android:src="@drawable/no_favorites" />

        <TextView
            android:id="@+id/firstMessage"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noFavoritesImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/first_message"
            android:textAlignment="center"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/secondMessage"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstMessage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/second_message"
            android:textAlignment="center"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/browseCollectionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/secondMessage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_design_2"
            android:gravity="center|bottom|top"
            android:includeFontPadding="false"
            android:paddingHorizontal="30dp"
            android:text="@string/browse_collections"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintVertical_bias="0.5" />

</RelativeLayout>