<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".video_section.people.PeopleActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/sectionHeaderImage"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:src="@drawable/persoane"
            android:contentDescription="@string/category_header_image" />

        <ImageView
            android:id="@+id/animalsSectionHeaderOverlay"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/overlay_background_final"
            android:contentDescription="@string/category_header_overlay" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp">

<!--            <ImageView-->
<!--                android:id="@+id/toPrevPageButton"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:src="@drawable/ic_arrow_circle_left" />-->

            <TextView
                android:id="@+id/animalsSectionHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/source_sans_pro_black"
                android:text="@string/header_title_people"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/animalsSectionHeaderText"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/source_sans_pro_regular"
                android:text="@string/header_subtitle_subcategory"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/sectionHeaderImage"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="20dp"
            app:strokeColor="@color/gray_border"
            app:strokeWidth="2dp">

            <EditText
                android:id="@+id/searchBarInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:hint="@string/input_placeholder_subcategory"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="16sp"
                android:autofillHints="@string/input_placeholder_subcategory"
                android:inputType="text" />

            <ImageView
                android:id="@+id/searchBarIcon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/search_bar_icon" />

        </com.google.android.material.card.MaterialCardView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="100dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/peopleRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/toHomePageFabButton"
            android:layout_width="wrap_content"
            android:layout_height="450dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/light_blue"
            android:src="@drawable/ic_home"
            app:backgroundTint="@color/white"
            app:borderWidth="2dp"
            app:rippleColor="@color/white"
            app:tint="@color/white"
            android:contentDescription="@string/home_page_button" />

    </RelativeLayout>

</ScrollView>