<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/subcategoryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:hint="@string/category_name"
        android:paddingVertical="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintWidth_percent=".8"
        android:autofillHints="@string/category_name"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/subcategoryImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/favorite_button"
        android:gravity="center|bottom|top"
        android:includeFontPadding="false"
        android:padding="15dp"
        android:text="@string/load_image"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/subcategoryName"
        app:layout_constraintTop_toBottomOf="@+id/subcategoryName"
        app:layout_constraintVertical_bias="0.15" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/subcategoryVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/favorite_button"
        android:gravity="center|bottom|top"
        android:includeFontPadding="false"
        android:padding="15dp"
        android:text="@string/load_video"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/subcategoryImage"
        app:layout_constraintTop_toBottomOf="@+id/subcategoryImage"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveSubcategoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design_2"
        android:gravity="center|bottom|top"
        android:includeFontPadding="false"
        android:paddingHorizontal="10dp"
        android:text="@string/save_subcategory"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subcategoryVideo"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>